--- a/leaflettest.html
+++ b/leaflettest.html
@@ -4,30 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        header h1 {
-            margin: 4vh;
-        }
-        nav {
-            margin: 2vh;
-            padding: 0.5vh;
-            border-radius: 0.5vh;
-            background-color: blanchedalmond;
-        }
-        nav ul li {
-            display: inline-block;
-            margin-right: 1.5vw;
-            background-color:blanchedalmond;
-        }
-        #map {
-            height: 60vh;
-            width: 100vw;
-            margin: 2vh;
-        }
-    </style>
+    <link href="stylesheet.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -38,7 +15,7 @@
             <input t/>
             </li>
             <li>
-                Statistik v
+                Statistik
             </li>
             <li>
                 Om Trygghetsbarometern
